<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">掘坑</string>
    <string name="hello_world">Hello world!</string>

    <string name="index_page">首页</string>
    <string name="settings">设置</string>
    
    <string name="about_content">该应用是一款编程学习类APP\n\n开发团队：JKDevelops</string>
    
    <string name="phone">手机号</string>
    
    <string name="code">验证码</string>
    
    <string name="commit">确认</string>
    
    <string name="new_password">新密码</string>
    
    <string name="nickname">昵称</string>
    
    <string name="password">密码</string>
    
    <string name="register">注册</string>
    
    <string name="get_code">获取验证码</string>
    
    <string name="login">登陆</string>
    
    <string name="failedtologin">无法登陆</string>
    
    <string name="newuser">新用户</string>
    
    <string name="succeedtochangheadpicture">头像更换成功！</string>
    
    <string name="failedtochangeheadpicture">头像更换失败！</string>
    
    <string name="personinfo">个人资料</string>
    
    <string name="mypost">我的发布</string>
    
    <string name="email">邮箱</string>
    
    <string name="worktype">职业</string>
    
    <string name="save">保存</string>
    
    <string name="secceed_save">保存成功！</string>
    
    <string name="succeed_save">保存成功！</string>
    
    <string name="failed_save">保存失败！</string>
    
    <string name="exit">退出</string>
    
    <string name="difficult">你遇到的坑</string>
    
    <string name="way">脱坑之路</string>
    
    <string name="howtofixout">解决这个问题的方法</string>
    
    <string name="detailofproblem">请描述“坑“的内容</string>
    
    <string name="problemnullerror">问题不能为空！</string>
    
    <string name="methodnullerror">解决办法不能为空！</string>
</resources>
