<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/layout_top_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <Button
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:background="@drawable/login_selector"
            android:textColor="@color/white"
            android:text="@string/nickname" />

        <EditText
            android:id="@+id/r_nickName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/nickname" />
    </LinearLayout>
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <Button
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:background="@drawable/login_selector"
            android:textColor="@color/white"
            android:text="@string/phone" />

        <EditText
            android:id="@+id/r_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <Button
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:background="@drawable/login_selector"
            android:textColor="@color/white"
            android:text="@string/password" />

        <EditText
            android:id="@+id/r_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password" />
    </LinearLayout>

    <Button
        android:layout_marginTop="5dp"
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/login_selector"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>