<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/layout_top_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/reset_phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:hint="@string/phone" />

        <Button
            android:id="@+id/get_reset_code"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:background="@drawable/login_selector"
            android:text="获取验证码"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/reset_code"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:hint="@string/code"/>

        <Button
            android:id="@+id/verify_reset_code"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:background="@drawable/login_selector"
            android:text="@string/commit"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:hint="@string/new_password"
            android:visibility="gone" />

        <Button
            android:id="@+id/commit"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:background="@drawable/login_selector"
            android:text="@string/commit"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>